Adiciona Exception Listner
