# swagger.yaml
@@ -78,8 +78,8 @@ paths:
       responses:
         200:
           description: "successful operation"
-          schema:
-            $ref: "#/definitions/ApiResponse"
+        400:
+          description: "Invalid XML"
       security:
       - api_key: []
 securityDefinitions:
@@ -129,8 +129,7 @@ definitions:
         type: "integer"
         format: "int64"
       orderperson:
-        type: "integer"
-        format: "int64"
+        $ref: "#/definitions/Person"
       shipto:
         $ref: "#/definitions/Shipto"
       items:
@@ -170,11 +169,6 @@ definitions:
         format: "float"
     xml:
       name: "item"
-  ApiResponse:
-    type: "object"
-    properties:
-      message:
-        type: "string"
 externalDocs:
   description: "Find out more about Shiporders"
   url: "https://github.com/junioweb/interview-shiporders/blob/master/README.md"
